--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -2,7 +2,7 @@ name: Padel Watcher
 
 on:
   schedule:
-    - cron: "*/10 * * * *"   # every 10 minutes
+    - cron: "*/10 * * * *"
   workflow_dispatch: {}
 
 jobs:
@@ -19,14 +19,19 @@ jobs:
 
       - name: Install deps
         run: |
+          pip install --upgrade pip
           pip install playwright requests
           python -m playwright install --with-deps chromium
+
+      - name: (debug) show files
+        run: |
+          pwd
+          ls -la
 
       - name: Check padel timetable (Playwright)
         env:
           TG_TOKEN:   ${{ secrets.TG_TOKEN }}
-          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}   # can be multiple, comma/semicolon separated
-          # --- Filters ---
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
           EARLIEST_HOUR: "18"
           LATEST_HOUR:   "22"
           DAYS_AHEAD:    "2"
@@ -34,3 +39,11 @@ jobs:
           WEEKDAYS_OK:   "true"
           ACTIVITY_NAME: "Padel"
         run: python checker_pw.py
+
+      - name: Upload debug screenshots (if any)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-screens
+          path: debug/*.png
+          if-no-files-found: ignore
