--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -9,9 +9,28 @@ jobs:
   watch:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
+    concurrency:
+      group: padel-watcher
+      cancel-in-progress: true
+
     steps:
       - uses: actions/checkout@v4
+
+      # Cache pip + Playwright browsers
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: pip-${{ runner.os }}-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: pip-${{ runner.os }}-
+
+      - name: Cache Playwright
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: pw-${{ runner.os }}-chromium-1.47
+          restore-keys: pw-${{ runner.os }}-
 
       - uses: actions/setup-python@v5
         with:
@@ -20,35 +39,53 @@ jobs:
       - name: Install deps
         run: |
           pip install --upgrade pip
-          pip install playwright requests
+          pip install playwright==1.47.0 requests
           python -m playwright install --with-deps chromium
 
-      - name: (debug) show files
-        run: |
-          pwd
-          ls -la
-
-      - name: Check padel timetable (Gladstone direct)
+      - name: Run checker
         env:
           TG_TOKEN:   ${{ secrets.TG_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
-
-          # Wide defaults; tune as you like
+          MAX_DAYS: "60"
+          STOP_AFTER_EMPTY_STREAK: "7"
           EARLIEST_HOUR: "0"
-          LATEST_HOUR:   "24"
-          DAYS_AHEAD:    "7"
-          WEEKENDS_OK:   "true"
-          WEEKDAYS_OK:   "true"
-
-          # Gladstone calendar config
-          ACTIVITY_ID:  "149A001015"  # Padel Tennis @ The Triangle
-          START_HOUR_Z: "5"           # builds ...T05:00:00.000Z in the URL
+          LATEST_HOUR: "24"
+          WEEKENDS_OK: "true"
+          WEEKDAYS_OK: "true"
+          ACTIVITY_ID: "149A001015"
+          START_HOUR_Z: "5"
         run: python checker_pw.py
 
-      - name: Upload debug screenshots (if any)
+      - name: Upload debug screenshots
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: debug-screens
           path: debug/*.png
           if-no-files-found: ignore
+
+      - name: Persist state
+        if: always()
+        run: |
+          if ! git diff --quiet -- state/; then
+            git config user.name "padel-bot"
+            git config user.email "padel-bot@users.noreply.github.com"
+            git add state/*.json || true
+            git commit -m "update state [skip ci]" || true
+            git push
+          fi
+
+  # keepalive to prevent cron pausing
+  keepalive:
+    runs-on: ubuntu-latest
+    schedule:
+      - cron: "0 0 1 * *"
+    steps:
+      - uses: actions/checkout@v4
+      - run: |
+          date +%F > .keepalive
+          git config user.name "padel-bot"
+          git config user.email "padel-bot@users.noreply.github.com"
+          git add .keepalive || true
+          git commit -m "keepalive [skip ci]" || true
+          git push
