--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,17 +1,17 @@
 name: Padel Watcher
 
+permissions:
+  contents: write
+
 on:
-  # BOTH schedules are declared at the top-level (correct place):
   schedule:
-    - cron: "*/1 * * * *"   # run every minute (main checker)
-    - cron: "0 0 1 * *"     # monthly keepalive so cron never pauses
-  workflow_dispatch: {}      # allow manual runs
+    - cron: "*/1 * * * *"   # run every minute
+    - cron: "0 0 1 * *"     # monthly keepalive
+  workflow_dispatch: {}
 
 jobs:
   watch:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     concurrency:
       group: padel-watcher
       cancel-in-progress: true
@@ -19,7 +19,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Cache pip + Playwright browsers to speed up cold starts
       - name: Cache pip
         uses: actions/cache@v4
         with:
@@ -48,19 +47,13 @@ jobs:
         env:
           TG_TOKEN:   ${{ secrets.TG_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
-
-          # scan/behaviour
-          MAX_DAYS: "60"
-          STOP_AFTER_EMPTY_STREAK: "7"
-
-          # time filters (wide by default)
+          BOT_USERNAME: "padelsniper_bot"
+          SCAN_DAYS: "14"
           EARLIEST_HOUR: "0"
           LATEST_HOUR: "24"
           WEEKENDS_OK: "true"
           WEEKDAYS_OK: "true"
-
-          # Gladstone calendar config
-          ACTIVITY_ID: "149A001015"  # Padel Tennis @ The Triangle
+          ACTIVITY_ID: "149A001015"
           START_HOUR_Z: "5"
         run: python checker_pw.py
 
@@ -84,6 +77,7 @@ jobs:
           fi
 
   keepalive:
+    if: github.event_name == 'schedule'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -93,4 +87,4 @@ jobs:
           git config user.email "padel-bot@users.noreply.github.com"
           git add .keepalive || true
           git commit -m "keepalive [skip ci]" || true
-          git push
+          git push || true
